@@ -10,6 +10,7 @@ Bug fixes:
  * Fixed problems #632064, #632208, #633107, #633167, #633331, #634972, #637873, #638059 (bugs in gnome-commander-help.master.po)
  * Fixed problem #657780 (bugs in nl.po)
  * Fixed problem #660043 (shortcut ALT+DOWN not documented)
+ * Fixed problem #660268 (remember directory history between sessions)
  * Fixed Ubuntu problem #117226 (bookmarks unification)
  * Fixed problem with right mouse button selection not being precise
 
